feat: oauth2 client implemented with github and google as providers